<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_account_balance_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_driver"
            android:icon="@drawable/ic_baseline_airline_seat_recline_normal_24"
            android:title="@string/menu_driver" />
        <item
            android:id="@+id/nav_trip"
            android:icon="@drawable/ic_baseline_inbox_24"
            android:title="@string/menu_trip" />
        <item
            android:id="@+id/nav_vehicle"
            android:icon="@drawable/ic_baseline_directions_bus_24"
            android:title="@string/menu_vehicle" />
    </group>



</menu>
